fixed screen glitch on small screen

--- a/frontend/src/styles/ListView.module.css
+++ b/frontend/src/styles/ListView.module.css
@@ -178,7 +178,7 @@ display: flex;
 }
 
 .very_big_item_text {
-    font-size: 150%;
+    font-size: 125%;
     font-weight: bolder;
 }
 
